Fix jumping header when loading height toggle

--- a/core-bundle/contao/themes/flexible/styles/main.css
+++ b/core-bundle/contao/themes/flexible/styles/main.css
@@ -2497,6 +2497,7 @@ time[title] {
 /* Default icon classes */
 .header_icon, .header_clipboard, .header_back, .header_new, .header_rss, .header_edit_all, .header_delete_all,
 .header_new_folder, .header_css_import, .header_theme_import, .header_store, .header_toggle, .header_sync {
+	display: inline-block;
 	padding: 3px 0 3px 21px;
 	background-color: transparent;
 	background-position: left center;
